# datarest

./: .gitattributes  .gitignore  AUTHORS.md  COPYRIGHT  HISTORY.md  Makefile  README.md  TODO.md  app.yaml  setup.cfg
examples/colors/: colors.csv
git/: config  git-clone-init
git/git-templates/hooks/: post-checkout
requirements/dev/: dev-base-requirements.txt  dev-requirements.txt
src/datarest/: __init__.py  __main__.py  _app.py  _app_config.py  _authn.py  _cfgfile.py  _crudrouter_ext.py  _csvtools.py  _data_resource_models.py  _data_resource_tools.py  _database.py  _datafiles.py  _jwt.py  _ldap_authn.py  _models.py  _resource_ids.py  _routes.py  _sqlmodel_ext.py  _yaml_tools.py  app.py  app.yaml  app_config.py  cli.py  database.py  database_sqlalchemy.py  models.py
src/datarest/_authentication/: _authn.py  _authn_backends.py  _authn_common.py  _authn_frontends.py  _jwt.py
src/sw_datarest/: __init__.py  app_config.py  cli.py  database.py  main.py  models.py  routes.py  tableschema.py  version.py
tests/: _playground_testing.py  app.yaml  colors.csv  colors.yaml  countries.csv  countries_app.yaml  test_authn.py  test_cfgfile.py  test_cli.py  test_crudrouter_ext.py  test_data_resource_models.py  test_data_resource_tools.py  test_ldap_authn.py  test_main.py  test_models.py  test_resource_ids.py  test_routes.py  test_sqlmodel_ext.py  test_yaml_tools.py  tests_cfgfile.py  tests_yaml_tools.py
