
[metadata]
name = sw-datarest
version = attr: sw_datarest.version.__version__
author = Simon Weiß
author_email = simon-weiss@gmx.de
description = Python low code data-driven REST-Tool short description
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/simon-w19/sw-datarest
project_urls =
    Bug Tracker = https://github.com/simon-w19/sw-datarest/issues
    Documentation = https://github.com/simon-w19/sw-datarest
    Source Code = https://github.com/simon-w19/sw-datarest
keywords =
license = License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)
classifiers =
    Development Status :: 2 - Pre-Alpha
    Operating System :: OS Independent
    License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3 :: Only

[options]
packages = find:
package_dir =
    = src
include_package_data = true
zip_safe = false
python_requires = >=3.6
install_requires = 
    async-exit-stack;python_version<'3.7'
    async-generator;python_version<'3.7'
    attrdict
    pyyaml
    sqlalchemy
    fastapi
    uvicorn
    fastapi-crudrouter
    
[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    sw-datarest = sw_datarest.cli:main
