
[metadata]
name = datarest
version = attr: datarest.version.__version__
author = Holger Joukl
author_email = holger.joukl@gmx.de
description = Python low code data driven REST API tool 
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/hjoukl/datarest
project_urls =
    Bug Tracker = https://github.com/hjoukl/datarest/issues
    Documentation = https://github.com/hjoukl/datarest
    Source Code = https://github.com/hjoukl/datarest
keywords =
license = License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)
classifiers =
    Development Status :: 4 - Beta
    Operating System :: OS Independent
    License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)
    Programming Language :: Python
    Programming Language :: Python :: 3 :: Only

[options]
packages = find:
package_dir =
    = src
include_package_data = true
zip_safe = false
python_requires = >=3.7
install_requires = 
    async-exit-stack;python_version<'3.7'
    async-generator;python_version<'3.7'
    fastapi>=0.95.1
    fastapi-crudrouter
    frictionless>=5.10.2,<5.12
    frictionless[sql]
    frictionless[excel]
    pyyaml
    python-jose[cryptography]
    python-multipart
    sqlalchemy
    sqlmodel
    typer
    uvicorn

[options.extras_require]
all =
    # use self-dependency for DRY of the actual extras packages
    datarest[jwt]
    datarest[ldap]
jwt = python-jose
ldap = ldap3

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    datarest = datarest.cli:cli

[yapf]
indent_closing_brackets = true
#align_closing_bracket_with_visual_indent = true
